java.hints/test/unit/data/goldenfiles/org/netbeans/modules/java/hints/errors/CreateElementTest/test190447c-hints.pass
Create Parameter t2
Create Local Variable t2
